hotfix: Fixed broken css

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -6,6 +6,7 @@
     --font-family: "Poppins", serif;
     --gray-section-background: rgb(245, 245, 245);
     --section-max-width: 1400px;
+    --faq-page-max-width: 1150px;
 }
 
 img {
